--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "html-snippets",
 	"displayName": "HTML Snippets",
-	"description": "Full HTML tags including HTML5 Snippets",
+	"description": "Migration - Full HTML tags including HTML5 Snippet, Principal proyect https://github.com/abusaidm/html-snippets",
 	"version": "0.0.1",
 	"publisher": "CKurisu",
 	"icon": "images/icon.png",
@@ -25,11 +25,11 @@
 	},
 	"license": "MIT",
 	"bugs": {
-			"url": "https://github.com/abusaidm/html-snippets/issues"
+			"url": "https://github.com/CKurisu/html-snippets/issues"
 	},
 	"repository": {
 			"type": "git",
-			"url": "https://github.com/abusaidm/html-snippets.git"
+			"url": "https://github.com/CKurisu/html-snippets.git"
 	},
-	"homepage": "https://github.com/abusaidm/html-snippets/blob/master/README.md"
+	"homepage": "https://github.com/CKurisu/html-snippets/blob/master/README.md"
 }
