--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "html-snippets",
-	"displayName": "HTML Snippets",
+	"name": "html-snippets-migrated",
+	"displayName": "HTML5 Snippets - Remaster",
 	"description": "Migration - Full HTML tags including HTML5 Snippet, Principal proyect https://github.com/abusaidm/html-snippets",
 	"version": "0.0.1",
 	"publisher": "CKurisu",
